[package]
name = "spms_ring"
version = "0.1.3"
authors = ["Todd Stellanova <tstellanova@users.noreply.github.com>"]
description= "Single publisher, multiple subscriber ring buffer for pubsub"
license = "BSD-3-Clause"
edition = "2018"
repository = "https://github.com/tstellanova/spms_ring"
categories = ["embedded", "no-std", "concurrency"]
keywords = [
    "buffer",
    "pubsub",
    "publish",
    "subscribe"
]
readme = "README.md"

[dependencies]
generic-array = "0.14.2"
nb = {version="0.1.2"}

[dev-dependencies]
lazy_static = "1.4.0"
